code/force-app/main/default/objects/Debt_Capital_Market__c/Debt_Capital_Market__c.object-meta.xml
<CustomObject>
    <label>Debt Capital Market</label>
    <nameField>
        <label>Borrower Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>