code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Amount_Converted_USD_MN__c.field-meta.xml
<CustomField>
    <fullName>Amount_Converted_USD_MN__c</fullName>
    <label>Amount Converted (USD mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>