code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Amount_MN__c.field-meta.xml
<CustomField>
    <fullName>Amount_MN__c</fullName>
    <label>Amount (mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>