code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Base_Rate_Margin_BPS__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_Margin_BPS__c</fullName>
    <label>Base Rate &amp; Margin (bps)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>