code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <label>Guarantor</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>