code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Major_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Major_Industry_Group__c</fullName>
    <label>Major Industry Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>