code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Primary_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Primary_Purpose__c</fullName>
    <label>Primary Purpose</label>
    <length>100</length>
    <type>Text</type>
</CustomField>