code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <label>Repayment Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>