code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Secured__c.field-meta.xml
<CustomField>
    <fullName>Secured__c</fullName>
    <label>Secured</label>
    <length>10</length>
    <type>Text</type>
</CustomField>