code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>