code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Tenor__c.field-meta.xml
<CustomField>
    <fullName>Tenor__c</fullName>
    <label>Tenor</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>