code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Top_Tier_Arranger__c.field-meta.xml
<CustomField>
    <fullName>Top_Tier_Arranger__c</fullName>
    <label>Top Tier Arranger</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>