code/force-app/main/default/objects/Debt_Capital_Market__c/fields/Tranche_Type__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Type__c</fullName>
    <label>Tranche Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>